name:                hangman
version:             0.1.0.0
synopsis:            A simple hangman like game, notes for ch 13 of haskellbook.com
homepage:            https://hpfp.readthedocs.io/en/latest/
license:             BSD3
license-file:        LICENSE
author:              Chris King-Parra
maintainer:          kingparra
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
